# idwt

./: CHANGELOG.md  Cargo.toml  Containerfile  README.md  justfile  test.nu
.github/workflows/: build-and-push.yml  publish-containers.yml  release-please.yml
dev/etc/idwt/: config.yml
dev/etc/nushell/: config.nu
docs/commands/: apply-command.md
docs/config/: block-sites.md  delay.md  flatpak-app-networking.md  networking.md  process-killing.md  scheduling.md  splitting-up-config.md  tightener.md  users-affected.md
docs/modules/: block-kwin-windows.md  block-networking.md  block-sites.md  close-gnome-windows.md  flatpak-app-networking.md  kill-gnome-windows.md  kill-plasma-windows.md  networking.md  process-killing.md  toggle-flatpak-networking.md
src/: commands.rs  config.rs  constants.rs  lib.rs  main.rs  state.rs  structs.rs
src/commands/: apply.rs  edit.rs  get_config.rs  tighten.rs
src/commands/apply/: all.rs  block_flatpaks.rs  block_networking.rs  delayed_edits.rs  revoke_admin.rs  system.rs
src/commands/tighten/: edit.rs
src/etc/idwt/: config.yml
src/etc/nushell/: config.nu
src/usr/lib/idwt/: config.nu  constants.nu  group.nu  lib.nu  schedule.nu
src/usr/lib/idwt/apply/: mod.nu
src/usr/lib/idwt/cmd/: apply-system.nu  apply-user.nu  apply.nu  edit.nu  get-config.nu  get_config.nu  mod.nu  pending.nu  tighten.nu
src/usr/lib/idwt/lib/: config.nu  constants.nu  group.nu  kwin.nu  property-lookup.nu  regex.nu  schedule.nu
src/usr/libexec/idwt/: tighten-apply.nu
tests/: cli.rs  mod.nu  regex.nu  schedule.nu
