[package]
name = "idwt"
version = "0.1.0"
edition = "2021"
authors = ["noahdotpy <noahdotpy@proton.me>"]
license = "MIT OR Apache-2.0"
description = "A self-control utility based on configuration files"
readme = "README.md"
homepage = "https://github.com/noahdotpy/idwt-rs"
repository = "https://github.com/noahdotpy/idwt-rs"
keywords = ["cli"]
categories = ["command-line-utilities"]

[package.metadata.bundle]
identifier = "io.github.noahdotpy.idwt-rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.9"
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "3.0.0"
serde_json = "1.0.133"
sjdiff = "0.0.5"
diff-struct = "0.5.3"
iptables = "0.5.2"
figment = { version = "0.10.19", features = ["yaml"] }
serde = "1.0.215"
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
assert_fs = "1.1.1"
